# Kinetic-Core

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
agents/: client.py  cosmos_store.py
agents/diagnostic_lead/: agent.py
agents/orchestrator/: orchestrator.py
agents/safety_auditor/: agent.py
agents/technical_librarian/: agent.py
api/: main.py
api/middleware/: logging.py
api/models/: schemas.py
api/routers/: agents.py  events.py  incidents.py  workorders.py
data/schemas/: maintenance_log_schema.json  telemetry_schema.json
data/synthetic/logs/: sql_seed.py
data/synthetic/telemetry/: generator.py
docs/: CNAME  index.html
docs/adr/: ADR-001-hybrid-rag.md  ADR-002-adversarial-safety-agent.md  ADR-003-cosmos-agent-memory.md
docs/architecture/: ARCHITECTURE.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css  main.tsx
ingestion/event_processor/: local.settings.json.example  processor.py  requirements.txt
ingestion/iot_simulator/: simulator.py
knowledge/chunker/: semantic_chunker.py
knowledge/embedder/: embedder.py
knowledge/indexer/: indexer.py
monitoring/drift/: detector.py
monitoring/evaluation/: evaluator.py  golden_test_set.jsonl
notebooks/: 01_thermal_fault_analysis.ipynb
scripts/: test_cosmos.py  test_diagnostic.py  test_evaluation.py  test_event_processor.py  test_full_pipeline.py  test_iothub.py  test_search.py
tests/unit/: test_diagnostic_lead.py  test_safety_auditor.py  test_semantic_chunker.py  test_telemetry_generator.py
(+22 files in other folders)
